--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,38 @@
-# Firebase Configuration
-# Get these from: https://console.firebase.google.com/
-# Project Settings > General > Your apps > Web app
-VITE_FIREBASE_API_KEY=your-api-key-here
+# ==========================================
+# FIREBASE CONFIGURATION
+# ==========================================
+# Get these values from Firebase Console:
+# 1. Go to https://console.firebase.google.com/
+# 2. Select your project
+# 3. Click Settings (gear icon) > Project Settings
+# 4. Scroll down to "Your apps" > Web app
+# 5. Copy the config values
+
+VITE_FIREBASE_API_KEY=AIzaSyXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 VITE_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your-project-id
 VITE_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
 VITE_FIREBASE_APP_ID=1:123456789:web:abcdef123456
 
-# GitHub Configuration
-# For image uploads to repository
-# Generate token: https://github.com/settings/tokens
-# Required permissions: repo (Full control of private repositories)
+# ==========================================
+# GITHUB CONFIGURATION
+# ==========================================
+# For uploading images to GitHub repository
+# 1. Go to https://github.com/settings/tokens
+# 2. Click "Generate new token (classic)"
+# 3. Select "repo" scope (Full control)
+# 4. Copy the generated token
+
 VITE_GITHUB_OWNER=Andrey2528
 VITE_GITHUB_REPO=AnKo
-VITE_GITHUB_BRANCH=main
-VITE_GITHUB_TOKEN=ghp_your_github_personal_access_token_here
+VITE_GITHUB_BRANCH=master
+VITE_GITHUB_TOKEN=ghp_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# ==========================================
+# NOTES
+# ==========================================
+# - Never commit .env file to Git!
+# - After creating/editing .env, restart dev server: npm run dev
+# - For production (Vercel), add these as Environment Variables in project settings
+
